--- a/package.json
+++ b/package.json
@@ -35,14 +35,16 @@
     "@types/webpack-env": "1.15.1",
     "@typescript-eslint/eslint-plugin": "2.19.2",
     "@typescript-eslint/parser": "2.19.2",
+    "concurrently": "5.1.0",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "styled-components": "5.0.0"
+    "styled-components": "5.0.0",
+    "superagent": "5.2.2"
   },
   "scripts": {
     "build": "webpack --config ./webpack.prod.js --mode production",
-    "dev": "webpack-dev-server",
+    "dev": "concurrently \"now dev\" \"yarn watch\"",
     "watch": "webpack --config ./webpack.config.js --mode development"
   }
 }
