--- a/now.json
+++ b/now.json
@@ -2,9 +2,10 @@
   "version": 2,
   "builds": [
     { "src": "public/*.*", "use": "@now/static" },
-    { "src": "api/index.js", "use": "@now/node" }
+    { "src": "api/*.js", "use": "@now/node" }
   ],
   "routes": [
+    { "src": "/api/locations", "dest": "/api/locations.js" },
     { "src": "/api", "dest": "/api/index.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
