--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "scripts": {
     "build": "webpack --config ./webpack.prod.js --mode production",
     "dev": "concurrently \"now dev\" \"yarn watch\"",
-    "watch": "webpack --config ./webpack.config.js --mode development"
+    "watch": "webpack --config ./webpack.config.js --mode development",
+    "release": "now --prod"
   }
 }
