--- a/now.json
+++ b/now.json
@@ -5,7 +5,7 @@
     { "src": "api/*.js", "use": "@now/node" }
   ],
   "routes": [
-    { "src": "/api/locations", "dest": "/api/locations.js" },
+    { "src": "/api/summary", "dest": "/api/summary.js" },
     { "src": "/api", "dest": "/api/index.js" },
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
