--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
+    "@types/react-tag-autocomplete": "5.12.0",
     "@types/recharts": "1.8.9",
     "@types/styled-components": "4.4.2",
     "@types/webpack-env": "1.15.1",
@@ -40,6 +41,7 @@
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-tag-autocomplete": "5.12.1",
     "recharts": "1.8.5",
     "styled-components": "5.0.0",
     "superagent": "5.2.2"
